[package]
name = "fm-index-vers"
version = "0.1.2"
authors = ["Koki Kato <koki.kato1994@gmail.com>"]
edition = "2021"
description = "FM index and its variant implementations for Rust, backed by vers-vecs."
repository = "https://github.com/faassen/fm-index-vers"
readme = "README.md"
homepage = "https://github.com/faassen/fm-index-vers"
documentation = "https://docs.rs/fm-index-vers"
license = "MIT OR Apache-2.0"
keywords = ["fm-index", "self-index", "succinct", "search", "vers", "vers-vecs"]
categories = ["data-structures", "algorithms"]


[dependencies]
vers-vecs = { version = "1.5.1", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.6.5"
criterion = "0.5"

[[bench]]
name = "construction"
path = "benches/construction.rs"
harness = false

[[bench]]
name = "locate"
path = "benches/locate.rs"
harness = false

[[bench]]
name = "count"
path = "benches/count.rs"
harness = false
